samples/_failures_safe/1761082890_e68b1c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19893c91.c: In function ‘main’:
./samples/SAFE/__tmp_19893c91.c:136:26: error: missing terminating " character
  136 |         if (sscanf(line, "%19s %9s %255[^\n
      |                          ^~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_19893c91.c:136:9: error: expected expression at end of input
  136 |         if (sscanf(line, "%19s %9s %255[^\n
      |         ^~
./samples/SAFE/__tmp_19893c91.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_19893c91.c:136:9: error: expected declaration or statement at end of input
